# career-coach-chatbot

./: .dockerignore  .env.example  .gitignore  AI_CHALLENGE_DEV_LOG.md  AI_CHALLENGE_SUBMISSION_GUIDE.md  API_FLOW_GUIDE.md  COMPLETION_REPORT.md  DEMO_SCENARIO.md  DEV_LOG.md  Dockerfile  GITHUB_COPILOT_CHAT_LOG.md  OPENAI_SETUP_GUIDE.md  README.md  api_test_demo.py  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  test_api.py
career_coach/: asgi.py  settings.py  urls.py  wsgi.py
chatbot/: ai_service.py  api.py  models.py  schemas.py  tests.py
chatbot/migrations/: 0001_initial.py
