[tool.poetry]
name = "career-coach-chatbot"
version = "0.1.0"
description = ""
authors = ["BE02LEEJAEHOON <ljhx6787@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.5"
django-ninja = "^1.4.3"
openai = "^1.99.9"
python-dotenv = "^1.1.1"
pydantic = "^2.11.7"
requests = "^2.32.4"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
